# GamepadMidiController

./: CMakeLists.txt  README.md
GamepadMidiController/: CMakeLists.txt  GamepadMidiController.cpp  GamepadMidiController.h
GamepadMidiController/input/: button_state.h  gamepad_scheme.h  input_handler.h  input_handler.tpp
GamepadMidiController/output/: midi1_output.cpp  midi1_output.h
GamepadMidiController/processor/: g2m_processor.h  g2m_processor.tpp
